visibility-settings-fix

--- a/social/static/css/yourbit_core.css
+++ b/social/static/css/yourbit_core.css
@@ -1448,11 +1448,10 @@ only be used for object transforms (shaping and scaling)
     }
 
     #create-bit-mobile {
-        display: none;
+        visibility: hidden;
         top: 100vh;
         width: 100vw;
-        height: 70vh;
-        transition: 0.2s;        
+        height: 80vh;          
         position: fixed;
         z-index: 25;
         background-color: rgba(0, 0, 0, 0.0);
@@ -1462,7 +1461,7 @@ only be used for object transforms (shaping and scaling)
         box-shadow: -1px -1px 10px black;
         text-align: center;
         color: white;
-        transition: 0.2s;
+
     }
 
     #mobile-body {
